--- a/Scipy.html
+++ b/Scipy.html
@@ -7,6 +7,10 @@
         body {
             font-family: verdana, arial, sans-serif;
         }
+        b {
+            font-size: 125%;
+            color: blue;
+        }
     </style>
 </head>
 <body>
