--- a/Numpy.html
+++ b/Numpy.html
@@ -7,6 +7,10 @@
         body {
             font-family: verdana, arial, sans-serif;
         }
+        b {
+            font-size: 125%;
+            color: blue;
+        }
     </style>
 </head>
 <body>
@@ -118,7 +122,7 @@
     воспользоваться другим методом. Он называется dot и на вход принимает два вектора, которые мы
     хотим приумножить. Допустим, давайте посмотрим скалярное произведение двух векторов, результатом
     которого уже будет не некоторый массив, а уже какое-то конкретное число. Таким же способом,
-    используя функцию dot, мы можем приумножать вектора с матрицами, либо еще делать какие-то
+    используя функцию <b>dot</b>, мы можем приумножать вектора с матрицами, либо еще делать какие-то
     приумножения между ними. В этом видео мы научились работать с библиотекой numpy, создавать
     многомерные массивы, смотреть какие есть атрибуты у этих массивов и также научились делать
     базовые математические операции над ними. В следующем видео мы поговорим про то, как можно
